--- a/responsiv.css
+++ b/responsiv.css
@@ -86,7 +86,7 @@ section{
   footer{
     width:100%;
     height:100px;
-    background-color: #333;
+    background-color: #ccc;
 
   }
   footer p{
