--- a/responsiv.css
+++ b/responsiv.css
@@ -93,7 +93,7 @@ section{
     text-align: center;
     line-height:100px;
     font-family:Tahoma;
-    color:black;
+    color:white;
     font-size:10px;
 
   }
