--- a/responsive.css
+++ b/responsive.css
@@ -117,6 +117,7 @@ section article #name h6, section article #email h6, {
   height:40px;
   line-height:40px;
   font-family:'devroye';
+  font-size: 26px;
 }
 section article #subscribe{
   background-color: red;
