--- a/responsive.css
+++ b/responsive.css
@@ -4,17 +4,12 @@
   font-family:'devroye';
   src: url(Fonts/Devroye/'devroye.ttf');
 }
-
-
 body{
   margin:0;
   padding:0;
 }
-
 header{
   width:100%;
-
-
 }
 
 header h1{
@@ -29,13 +24,13 @@ header h1{
 header #hamburger{
   float:right;
   margin-right:5%;
-  width:15%;
-  height:45px;
-  margin-top:38px;
+  width:12%;
+  height:15px;
+  margin-top:40px;
 }
 header #hamburger .bar{
   max-width:100%;
-  height:7px;
+  height:3px;
   background-color: black;
   margin-bottom:5px;
 }
@@ -101,6 +96,7 @@ section #subscription{
   margin-right:auto;
   margin-left:auto;
   padding-top:30px;
+  padding-bottom:30px;
 }
 section #subscription h1{
 
@@ -113,14 +109,17 @@ section article #name, section article #email, section article #subscribe{
   margin-top:20px;
   height:40px;
 }
-section article #name h6, section article #email h6, {
+
+section article #name h6, section article #email h6 {
   height:40px;
   line-height:40px;
   font-family:'devroye';
-  font-size: 26px;
+
 }
 section article #subscribe{
   background-color: red;
+
+
 
 }
 section article #subscribe h2{
@@ -129,4 +128,6 @@ section article #subscribe h2{
     line-height: 40px;
     letter-spacing: 0px;
     text-align: center;
+    font-size:18px;
+
 }
